Fixed: with handler of resize
- When the site is initialized, elements that cannot fit into the
container are automatically moved to a hidden location.
- Added hover tabs__box element

--- a/src/App.css
+++ b/src/App.css
@@ -104,4 +104,5 @@ body {
   width: 100%;
   padding: 0 20px;
   margin: 0 auto;
+  overflow: hidden;
 }
