--- a/src/components/Sidebar/styles.css
+++ b/src/components/Sidebar/styles.css
@@ -1,5 +1,5 @@
 .sidebar {
-  max-width: 62px;
+  max-width: 224px;
   width: 100%;
   background-color: var(--white);
   border: 1px solid var(--light-gray);
