--- a/src/components/Tabs/styles.css
+++ b/src/components/Tabs/styles.css
@@ -36,11 +36,11 @@
 
 .tabs__body {
   display: flex;
+  height: 100%;
 }
 
 .tabs__box {
   width: 48px;
-  height: 48px;
   display: flex;
   align-items: center;
   justify-content: center;
@@ -55,19 +55,43 @@
 }
 
 .tabs__item {
-  padding: 16px 20px;
   display: flex;
   align-items: center;
   justify-content: center;
   cursor: pointer;
   background-color: var(--white);
-  color: var(--gray);
   position: relative;
   transition: 0.3s linear;
 }
 
+.tabs__item a:first-child {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  color: var(--gray);
+  padding: 16px 20px;
+  height: 100%;
+}
+
+.activePath {
+  background-color: var(--powder-blue);
+  color: var(--dark);
+  position: relative;
+}
+
+.activePath::after {
+  content: "";
+  display: block;
+  width: 100%;
+  height: 2px;
+  background-color: var(--blue);
+  position: absolute;
+  top: 0;
+  left: 0;
+}
+
 .tabs__item svg:last-child {
-  margin-left: 10px;
+  margin: 0 0 0 10px;
   display: none;
   fill: var(--tomato);
 }
@@ -89,15 +113,30 @@
   transform: translateY(-50%) rotate(90deg);
 }
 
-.tabs__item:hover {
-  transition: 0.3s linear;
-  background-color: var(--powder-blue);
-  color: var(--dark);
+.nested-list {
+  display: none;
+  position: absolute;
+  top: 100%;
+  z-index: 10;
+  left: 0;
+  background: var(--white);
+  border-radius: 4px;
+  border: 1px solid var(--light-gray);
+  transform: translateY(50%);
+  font-weight: 14px;
 }
 
-.tabs__item:hover svg {
-  transition: 0.3s linear;
-  color: red !important;
+.nested-list__item {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  white-space: nowrap;
+  padding: 10px 15px 10px 5px;
+  color: var(--gray);
+}
+
+.tabs__item:hover .nested-list {
+  display: block;
 }
 
 .tabs__item svg {
@@ -106,11 +145,24 @@
 
 .tabs__box {
   transition: 0.3s linear;
+  min-width: 64px;
 }
 
 .tabs__box:hover {
   transition: 0.3s linear;
-  background-color: var(--light-gray);
+  background-color: var(--powder-blue);
+  position: relative;
+}
+
+.tabs__box:hover::after {
+  content: "";
+  display: block;
+  width: 100%;
+  height: 2px;
+  background-color: var(--dark);
+  position: absolute;
+  top: 0;
+  left: 0;
 }
 
 .tabs__popup {
@@ -147,4 +199,30 @@
 
 .tabs__item-popup svg:last-child {
   margin-left: 10px;
+}
+
+.tabs__box-popup {
+  top: 100%;
+  left: 50%;
+  transform: translate(-50%, 0px);
+  display: none;
+}
+
+.tabs__box:hover .tabs__box-popup{
+  display: block;
+}
+
+.tabs__box-popup ul {
+  background-color: var(--white);
+  padding: 15px;
+  margin-top: 10px;
+}
+
+.tabs__box-popup-item {
+  display: flex;
+  align-items: center;
+}
+
+.tabs__box-popup-item svg {
+  margin-right: 10px;
 }
