--- a/src/pages/Home/styles.css
+++ b/src/pages/Home/styles.css
@@ -1,5 +1,5 @@
 .home__wrapper {
-  padding: 20px;
+  padding: 20px 20px 60px 20px;
   background-color: var(--milk);
   width: 100%;
   height: 100%;
